--- a/jcMNS.WebAPI.Pingback/project.lock.json
+++ b/jcMNS.WebAPI.Pingback/project.lock.json
@@ -3,10 +3,6 @@
   "version": 2,
   "targets": {
     "DNX,Version=v4.5.1": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -1565,10 +1561,6 @@
       }
     },
     "DNXCore,Version=v5.0": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -3685,10 +3677,6 @@
       }
     },
     "DNX,Version=v4.5.1/win7-x86": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -5250,10 +5238,6 @@
       }
     },
     "DNX,Version=v4.5.1/win7-x64": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -6815,10 +6799,6 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x86": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -9344,10 +9324,6 @@
       }
     },
     "DNXCore,Version=v5.0/win7-x64": {
-      "jcMNS.PCL/1.0.0": {
-        "type": "project",
-        "framework": ".NETPortable,Version=v4.5,Profile=Profile7"
-      },
       "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
         "type": "package",
         "dependencies": {
@@ -11874,10 +11850,6 @@
     }
   },
   "libraries": {
-    "jcMNS.PCL/1.0.0": {
-      "type": "project",
-      "path": "../jcMNS.PCL/project.json"
-    },
     "Microsoft.AspNet.Antiforgery/1.0.0-rc1-final": {
       "type": "package",
       "serviceable": true,
@@ -16752,11 +16724,7 @@
       "Microsoft.Extensions.Logging.Console >= 1.0.0-rc1-final",
       "Microsoft.Extensions.Logging.Debug >= 1.0.0-rc1-final"
     ],
-    "DNX,Version=v4.5.1": [
-      "jcMNS.PCL >= 1.0.0-*"
-    ],
-    "DNXCore,Version=v5.0": [
-      "jcMNS.PCL >= 1.0.0-*"
-    ]
+    "DNX,Version=v4.5.1": [],
+    "DNXCore,Version=v5.0": []
   }
 }
