--- a/jcMNS.WebAPI.Reporting/project.json
+++ b/jcMNS.WebAPI.Reporting/project.json
@@ -6,26 +6,19 @@
 
   "dependencies": {
     "jcMNS.Library.WebAPI": "1.0.0-*",
+    "jcMNS.WebAPI.Reporting.PCL": "1.0.0-*",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
-    "Microsoft.AspNet.Mvc": "6.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.Core": "6.0.0-rc1-final",
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
-    "Microsoft.AspNet.StaticFiles": "1.0.0-rc1-final",
+    "Microsoft.AspNet.Mvc.Formatters.Json": "6.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging.Console": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Logging.Debug": "1.0.0-rc1-final"
+    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final"
   },
 
   "commands": {
     "web": "Microsoft.AspNet.Server.Kestrel"
   },
-
-  "frameworks": {
-    "dnx451": { },
-    "dnxcore50": { }
-  },
-
+  
   "exclude": [
     "wwwroot",
     "node_modules"
