Started implementing the PingBackController

--- a/jcMNS.WebAPI.Pingback.DataLayer/project.json
+++ b/jcMNS.WebAPI.Pingback.DataLayer/project.json
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
-    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final"
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
+    "jcMNS.Library.DataLayer": "1.0.0-*"
   }
 }
