--- a/jcMNS.WebAPI.Reporting/project.json
+++ b/jcMNS.WebAPI.Reporting/project.json
@@ -12,7 +12,8 @@
     "Microsoft.AspNet.Server.Kestrel": "1.0.0-rc1-final",
     "Microsoft.AspNet.Mvc.Formatters.Json": "6.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
-    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final"
+    "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
+    "jcMNS.WebAPI.Reporting.DataLayer": "1.0.0-*"
   },
 
   "commands": {
