--- a/jcMNS.Library.DataLayer/project.json
+++ b/jcMNS.Library.DataLayer/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "version": "1.0.0-*",
   "description": "jcMNS.Library.DataLayer Class Library",
   "authors": [ "Jarred" ],
@@ -18,6 +18,7 @@
     }
   },
   "dependencies": {
+    "EntityFramework.Core": "7.0.0-rc1-final",
     "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final"
   }
 }
