--- a/jcMNS.WebAPI.Reporting/project.json
+++ b/jcMNS.WebAPI.Reporting/project.json
@@ -5,6 +5,7 @@
   },
 
   "dependencies": {
+    "EntityFramework.MicrosoftSqlServer": "7.0.0-rc1-final",
     "jcMNS.Library.WebAPI": "1.0.0-*",
     "jcMNS.WebAPI.Reporting.Library": "1.0.0-*",
     "Microsoft.AspNet.IISPlatformHandler": "1.0.0-rc1-final",
@@ -13,7 +14,8 @@
     "Microsoft.AspNet.Mvc.Formatters.Json": "6.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
-    "jcMNS.WebAPI.Reporting.DataLayer": "1.0.0-*"
+    "jcMNS.WebAPI.Reporting.DataLayer": "1.0.0-*",
+    "EntityFramework.Commands": "7.0.0-rc1-final"
   },
 
   "commands": {
