--- a/jcMNS.WebAPI.Reporting/project.json
+++ b/jcMNS.WebAPI.Reporting/project.json
@@ -15,7 +15,8 @@
     "Microsoft.Extensions.Configuration.FileProviderExtensions": "1.0.0-rc1-final",
     "Microsoft.Extensions.Configuration.Json": "1.0.0-rc1-final",
     "jcMNS.WebAPI.Reporting.DataLayer": "1.0.0-*",
-    "EntityFramework.Commands": "7.0.0-rc1-final"
+    "EntityFramework.Commands": "7.0.0-rc1-final",
+    "jcMNS.WebAPI.Pingback.DataLayer": "1.0.0-*"
   },
 
   "commands": {
